--- a/Unity.Console.Plugin/Unity.Console.Plugin.csproj
+++ b/Unity.Console.Plugin/Unity.Console.Plugin.csproj
@@ -12,49 +12,49 @@
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
+    <ErrorReport>prompt</ErrorReport>
+    <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <OutputPath>..\bin\$(Configuration)\</OutputPath>
+    <BaseIntermediateOutputPath>..\temp\ucp\</BaseIntermediateOutputPath>
+    <DebugType>pdbonly</DebugType>
+    
+    <UnityVersion>Unity5</UnityVersion>
+    <UnityVersion Condition="$(Configuration.Contains('Unity4'))">Unity4</UnityVersion>
+    <UnityVersion Condition="$(Configuration.Contains('Unity5'))">Unity5</UnityVersion>
+    <UnityVersion Condition="$(Configuration.Contains('Unity2017'))">Unity2017</UnityVersion>
+    <UnityVersion Condition="$(Configuration.Contains('Unity2018'))">Unity2018</UnityVersion>
+    <UnityVersion Condition="$(Configuration.Contains('Unity2019'))">Unity2019</UnityVersion>
+    <ConfigType>Release</ConfigType>
+    <ConfigType Condition="$(Configuration.Contains('Debug'))">Debug</ConfigType>
+    <ConfigType Condition="$(Configuration.Contains('Release'))">Release</ConfigType>
+    <UnityTypeFlag>UNITY4</UnityTypeFlag>
+    <UnityTypeFlag Condition="'$(UnityVersion)' == 'Unity5'">UNITY5</UnityTypeFlag>
+    <UnityTypeFlag Condition="'$(UnityVersion)' == 'Unity2017'">UNITY_STANDALONE_WIN</UnityTypeFlag>
+    <UnityTypeFlag Condition="'$(UnityVersion)' == 'Unity2018'">UNITY_STANDALONE_WIN</UnityTypeFlag>
+    <UnityTypeFlag Condition="'$(UnityVersion)' == 'Unity2019'">UNITY_STANDALONE_WIN</UnityTypeFlag>
+    
+    <UnityCore>false</UnityCore>
+    <UnityCore Condition="'$(UnityVersion)' == 'Unity2017'">true</UnityCore>
+    <UnityCore Condition="'$(UnityVersion)' == 'Unity2018'">true</UnityCore>
+    <UnityCore Condition="'$(UnityVersion)' == 'Unity2019'">true</UnityCore>
+    
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion Condition="'$(UnityVersion)' == 'Unity2018'">V4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion Condition="'$(UnityVersion)' == 'Unity2019'">V4.0</TargetFrameworkVersion>
+
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Unity5Debug|AnyCPU' ">
+  <PropertyGroup Condition=" '$(ConfigType)' == 'Release'">
+    <DefineConstants>TRACE;$(UnityTypeFlag)</DefineConstants>
+    <Optimize>true</Optimize>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(ConfigType)' == 'Debug'">
+    <DefineConstants>TRACE;$(UnityTypeFlag);DEBUG</DefineConstants>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\bin\$(Configuration)\</OutputPath>
-    <BaseIntermediateOutputPath>..\temp\ucp\</BaseIntermediateOutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <UnityVersion>Unity5</UnityVersion>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Unity5Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>..\bin\$(Configuration)\</OutputPath>
-    <BaseIntermediateOutputPath>..\temp\ucp\</BaseIntermediateOutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <UnityVersion>Unity5</UnityVersion>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Unity4Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>..\bin\$(Configuration)\</OutputPath>
-    <BaseIntermediateOutputPath>..\temp\ucp\</BaseIntermediateOutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <UnityVersion>Unity4</UnityVersion>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Unity4Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>..\bin\$(Configuration)\</OutputPath>
-    <BaseIntermediateOutputPath>..\temp\ucp\</BaseIntermediateOutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <UnityVersion>Unity4</UnityVersion>
-  </PropertyGroup>
+  
   <ItemGroup>
     <Reference Include="IllusionPlugin">
       <HintPath>..\Vendor\IllusionPlugin.dll</HintPath>
@@ -62,12 +62,13 @@
     <Reference Include="System" />
     <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Library\$(UnityVersion)\UnityEngine.dll</HintPath>
+      <HintPath>..\vendor\$(UnityVersion)\UnityEngine.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConsolePlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WindowsInput.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
