Fix library paths for compile

--- a/Unity.Console/Unity.Console.csproj
+++ b/Unity.Console/Unity.Console.csproj
@@ -106,8 +106,20 @@
   
 
   <ItemGroup Condition="!$(UnityCore)">
-    <Reference Include="UnityEngine">
+    <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\Library\$(UnityVersion)\UnityEngine.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+  <ItemGroup Condition="$(UnityCore)">
+    <Reference Include="UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Library\$(UnityVersion)\UnityEngine.CoreModule.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+  <ItemGroup Condition="$(UnityCore)">
+    <Reference Include="UnityEngine.InputModule, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Library\$(UnityVersion)\UnityEngine.InputModule.dll</HintPath>
     </Reference>
   </ItemGroup>
   <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
