--- a/Unity.Python.Modules/Unity.Python.Modules.csproj
+++ b/Unity.Python.Modules/Unity.Python.Modules.csproj
@@ -104,13 +104,13 @@
 
   <ItemGroup Condition="!$(UnityCore)">
     <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\vendor\$(UnityVersion)\UnityEngine.dll</HintPath>
+      <HintPath>..\Library\$(UnityVersion)\UnityEngine.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup Condition="$(UnityCore)">
     <Reference Include="UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\vendor\$(UnityVersion)\UnityEngine.CoreModule.dll</HintPath>
+      <HintPath>..\Library\$(UnityVersion)\UnityEngine.CoreModule.dll</HintPath>
     </Reference>
   </ItemGroup>
   <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
