--- a/Unity.Python.Modules/Unity.Python.Modules.csproj
+++ b/Unity.Python.Modules/Unity.Python.Modules.csproj
@@ -81,6 +81,12 @@
   </ItemGroup>
 
   <ItemGroup Condition="'$(UnityVersion)' != 'Unity2019'">
+    <Reference Include="Microsoft.Scripting.Core">
+      <HintPath>..\Library\$(UnityVersion)\Microsoft.Scripting.Core.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(UnityVersion)' == 'Unity2018'">
     <Reference Include="mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
       <HintPath>..\Library\$(UnityVersion)\mscorlib.dll</HintPath>
       <Private>False</Private>
@@ -97,8 +103,24 @@
       <HintPath>..\Library\$(UnityVersion)\System.Xml.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="Microsoft.Scripting.Core">
-      <HintPath>..\Library\$(UnityVersion)\Microsoft.Scripting.Core.dll</HintPath>
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(UnityVersion)' == 'Unity4'">
+    <Reference Include="mscorlib, Version=2.0.5.0, Culture=neutral, PublicKeyToken=7cec85d7bea7798e">
+      <HintPath>..\Library\$(UnityVersion)\mscorlib.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="System, Version=2.0.5.0, Culture=neutral, PublicKeyToken=7cec85d7bea7798e">
+      <HintPath>..\Library\$(UnityVersion)\System.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="System.Core, Version=2.0.5.0, Culture=neutral, PublicKeyToken=7cec85d7bea7798e">
+      <HintPath>..\Library\$(UnityVersion)\System.Core.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="System.Xml, Version=2.0.5.0, Culture=neutral, PublicKeyToken=7cec85d7bea7798e">
+      <HintPath>..\Library\$(UnityVersion)\System.Xml.dll</HintPath>
+      <Private>False</Private>
     </Reference>
   </ItemGroup>
 
